# TransitOps_Odoo2026

./: .gitignore  README.md  SETUP.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: dependencies.py  security.py
backend/app/db/: base.py  session.py  sqlite_repo.py
backend/app/db/init/: dummy_data.json  init_db.py  seed_db.py
backend/app/modules/: auth.py  dashboard.py  destinations.py  finance.py  fleet.py  maintenance.py  schemas.py  trips.py
backend/database/: transitops.db
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  siteConfig.ts
frontend/src/app/analytics/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/drivers/: page.tsx
frontend/src/app/fleet/: page.tsx
frontend/src/app/fuel-and-expenses/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/maintenance/: page.tsx
frontend/src/app/quotes/: layout.tsx
frontend/src/app/quotes/audits/: page.tsx
frontend/src/app/quotes/monitoring/: page.tsx
frontend/src/app/quotes/overview/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/trips/: page.tsx
frontend/src/components/: AppShell.tsx
frontend/src/components/ui/navigation/: AppSidebar.tsx  Breadcrumbs.tsx  DropdownUserProfile.tsx  UserProfile.tsx
frontend/src/data/: data.ts
frontend/src/lib/: ProfileContext.tsx  api.ts  rbacConfig.ts
frontend/src/types/: driver.ts  maintenance.ts  trip.ts  vehicle.ts
